[gd_scene load_steps=25 format=3 uid="uid://cqx0sv8e738w5"]

[ext_resource type="PackedScene" uid="uid://dr0imdqu8gxhy" path="res://Interface/Menu/menu_settings.tscn" id="1_uklmi"]
[ext_resource type="Script" path="res://Interface/Menu/scripts/menu_main.gd" id="1_xa7q2"]
[ext_resource type="AudioStream" uid="uid://bl3vitp710heu" path="res://Audio/ButtonActivationTest.WAV" id="2_3lygh"]
[ext_resource type="AudioStream" uid="uid://blpfghbn0aexa" path="res://Audio/BadSound.WAV" id="3_3yw06"]
[ext_resource type="Material" uid="uid://b24kr425h1i46" path="res://Materials/Placeholders/PlaceHolder_material_2.tres" id="4_x7d43"]
[ext_resource type="Material" uid="uid://dd4xwrwmwhmmj" path="res://Materials/Placeholders/PlaceHolder_material_1.tres" id="5_xe7ej"]
[ext_resource type="PackedScene" uid="uid://dbuulp5flt325" path="res://Models/Lights/spotlight_broken.tscn" id="6_6wyk5"]
[ext_resource type="PackedScene" uid="uid://cekcgwtk2c1dj" path="res://Interface/Transitionning/transition_screen.tscn" id="8_u4hnn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pwlfv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r1w8c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xl42b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_64me5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i433m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dw6n7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c4ylg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_03mte"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pnm17"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lwrvx"]

[sub_resource type="Animation" id="Animation_7tw8t"]
resource_name = "Idle"
length = 4.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-5, -0.25, 0, 0.25, 0, -5.1, -0.25, 0, 0.25, 0, -5.1, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2, 3, 4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 3.2, -0.25, 0, 0.25, 0, 3.2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2, 3, 4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(9, -0.25, 0, 0.25, 0, 8.9, -0.25, 0, 0.25, 0, 8.9, -0.25, 0, 0.25, 0, 9, -0.25, 0, 0.25, 0, 9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2, 3, 4)
}

[sub_resource type="Animation" id="Animation_7uukp"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0qj1h"]
_data = {
"Idle": SubResource("Animation_7tw8t"),
"RESET": SubResource("Animation_7uukp")
}

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rr34i"]
sky_top_color = Color(0, 0.12549, 0.278431, 1)
sky_horizon_color = Color(0.258824, 0.341176, 0.341176, 1)
ground_bottom_color = Color(0.2, 0.168627, 0.133333, 1)
ground_horizon_color = Color(0.611765, 0.643137, 0.74902, 1)

[sub_resource type="Sky" id="Sky_jjufu"]
sky_material = SubResource("ProceduralSkyMaterial_rr34i")

[sub_resource type="Environment" id="Environment_wsltm"]
background_mode = 1
background_energy_multiplier = 16.0
sky = SubResource("Sky_jjufu")
ambient_light_energy = 16.0
reflected_light_source = 1
tonemap_mode = 2
tonemap_white = 6.0
ssao_enabled = true
fog_enabled = true
fog_light_color = Color(0.121569, 0.133333, 0.156863, 1)
fog_sun_scatter = 0.3
fog_density = 0.04
fog_sky_affect = 0.5

[node name="Menu_Main" type="CanvasLayer"]
script = ExtResource("1_xa7q2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Btn_Start" type="Button" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_pwlfv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_r1w8c")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xl42b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_64me5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_i433m")
text = "Start Game
"

[node name="Btn_Settings" type="Button" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_dw6n7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_c4ylg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_03mte")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pnm17")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lwrvx")
text = "Settings"

[node name="Btn_Credits" type="Button" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_dw6n7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_c4ylg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_03mte")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pnm17")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lwrvx")
text = "credits"

[node name="Label" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="Map_Selector" type="MarginContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 460
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="Control/Map_Selector"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Map_Selector"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TestMap" type="Button" parent="Control/Map_Selector/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "map_player_testing.tscn
"

[node name="Zone1Blocky" type="Button" parent="Control/Map_Selector/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Zone1_blocky.tscn
"

[node name="Audio_start" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("2_3lygh")

[node name="Audio_Base" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("3_3yw06")

[node name="Background" type="Node3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport"]
transform = Transform3D(0.866026, -7.74287e-08, -0.5, 0.0405692, 0.996703, 0.0702678, 0.498351, -0.0811383, 0.86317, -5, 3, 9)
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/SubViewportContainer/SubViewport/Camera3D"]
libraries = {
"": SubResource("AnimationLibrary_0qj1h")
}
autoplay = "Idle"
speed_scale = 0.75

[node name="Map" type="Node3D" parent="Background"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background/Map"]
environment = SubResource("Environment_wsltm")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Background/Map"]
transform = Transform3D(-0.866025, -0.245452, 0.435607, -0.353554, -0.315425, -0.880629, 0.353553, -0.916657, 0.186385, 0, 0, 0)
light_color = Color(0.654902, 0.803922, 1, 1)
light_energy = 0.0
shadow_enabled = true

[node name="CSGBox3D" type="CSGBox3D" parent="Background/Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -32)
use_collision = true
size = Vector3(176, 1, 112)
material = ExtResource("4_x7d43")

[node name="Ramp1" type="CSGCombiner3D" parent="Background/Map"]
use_collision = true

[node name="CSGBox3D2" type="CSGBox3D" parent="Background/Map/Ramp1"]
transform = Transform3D(0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0, 1, 1.68978, 0.377646, 0.5)
size = Vector3(4.4, 0.2, 4.6)
material = ExtResource("5_xe7ej")

[node name="CSGBox3D3" type="CSGBox3D" parent="Background/Map/Ramp1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.97615, 0.941248, 0.5)
size = Vector3(4.4, 0.2, 4.6)
material = ExtResource("5_xe7ej")

[node name="Ramp2" type="CSGCombiner3D" parent="Background/Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.8)
use_collision = true

[node name="CSGBox3D2" type="CSGBox3D" parent="Background/Map/Ramp2"]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 1.68978, 0.377646, 0.5)
size = Vector3(4.4, 0.2, 4.6)
material = ExtResource("5_xe7ej")

[node name="CSGBox3D3" type="CSGBox3D" parent="Background/Map/Ramp2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.75364, 1.4609, 0.5)
size = Vector3(4.4, 0.2, 4.6)
material = ExtResource("5_xe7ej")

[node name="Spotlight_Broken" parent="Background/Map" instance=ExtResource("6_6wyk5")]
light_color = Color(1, 1, 0.737255, 1)
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
shadow_enabled = true
spot_range = 8.2
spot_angle = 64.5797
MAX_OFF_TIME = 0.5
MAX_ON_TIME = 15.0
MIN_ON_TIME = 1.0

[node name="Menu_settings" parent="." instance=ExtResource("1_uklmi")]
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2

[node name="Transition Screen" parent="." instance=ExtResource("8_u4hnn")]

[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Btn_Start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Btn_Settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="Control/Map_Selector/VBoxContainer/TestMap" to="." method="_on_test_map_pressed"]
[connection signal="pressed" from="Control/Map_Selector/VBoxContainer/Zone1Blocky" to="." method="_on_zone_1_blocky_pressed"]
[connection signal="Transition" from="Transition Screen" to="." method="_on_transition_screen_transition"]
